src/app/static/css/theme.css
html, body {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
}

body {
	background-color: #fee1b7;
	font-family: Roboto, system-ui;
	display: flex;
}

#wrapper {
	margin: 0 auto;
	width: 100%;
	height: 100%;
	display: flex;
	/* justify-content: center; */
	flex-direction: column;
	align-items: center;
	text-align: center;
}

.anchor-btn {
	position: relative;
	display: inline-block;
	color: #0cc2ff;
	text-decoration: none;
	padding: 5px 0;
	font-weight: bold;
	transition: color 0.3s ease;
}

.anchor-btn::after {
	content: '';
	position: absolute;
	width: 100%;
	height: 2px;
	bottom: 0;
	left: 0;
	background-color: #54428E;
	transform: scaleX(0);
	transform-origin: bottom right;
	transition: transform 0.3s ease;
}

.anchor-btn:hover::after {
	transform: scaleX(1);
	transform-origin: bottom left;
}

.anchor-btn:hover {
	color: #54428E;
}

.navbar-btn {
	font-size: 3vh;
}

.header{
    background-color: var(--black);
    box-shadow: 1px 1px 5px 0px var(--gray);
    position: sticky;
    top: 0;
    width: 100%;
}

.logo{
    display: inline-block;
    color: var(--white);
    font-size: 60px;
    margin-left: 10px;
}

#navbar {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding-bottom: 1vh;
	/* position: absolute;
	bottom: 20px;
	left: 10px; */
	right: 10px;
	border-radius: 25px;

	background-color: rgb(155, 155, 155);
}

.mobile-nav {
	background: #F1F1F1;
	position: fixed;
	bottom: 0;
	height: 10%;
	width: 100%;
	display: flex;
	justify-content: space-around;
}

.bloc-icon {
	display: flex;
	justify-content: center;
	align-items: center;
}

.bloc-icon img {
	width: 30px;
}

/* @media screen and (min-width: 600px) {
	.mobile-nav {
	display: none;
	}
} */

.light-anchor-style {
	color: #74bcfc;
}

.light-anchor-style::after {
	background-color: #3179ee;
}

.light-anchor-style:hover {
	color: #3179ee;
}

.blue-btn {
	background-color: #3179ee;
}

.blue-btn:hover {
	background-color: #2266d3;
}

.blue-btn:disabled {
	background-color: gray;
}

/* CSS */
.journey {
  background-color: #FFFFFF;
  border: 1px solid #222222;
  border-radius: 8px;
  box-sizing: border-box;
  color: #222222;
  cursor: pointer;
  display: inline-block;
  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 20px;
  margin: 0;
  outline: none;
  padding: 13px 23px;
  position: relative;
  text-align: center;
  text-decoration: none;
  touch-action: manipulation;
  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
  user-select: none;
  -webkit-user-select: none;
  width: auto;
}

.journey:focus-visible {
  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
  transition: box-shadow .2s;
}

.journey:active {
  background-color: #F7F7F7;
  border-color: #000000;
  transform: scale(.96);
}

.journey:disabled {
  border-color: #DDDDDD;
  color: #DDDDDD;
  cursor: not-allowed;
  opacity: 1;
}

